[package]
name = "sss"
version = "0.1.0"
authors = ["Ding Xiang Fei <dingxiangfei2009@gmail.com>"]
edition = "2018"

[dependencies]
alga = "0.9.1"
alga_derive = "0.9.1"
rayon = "1.2.0"
rand = "0.7.2"
num = "0.2.0"
derive_more = "0.15.0"
lazy_static = "1.0"
failure = "0.1.0"

[dependencies.ndarray]
version = "0.13.0"
features = ["rayon"]

[dev-dependencies]
approx = "0.3.0"
quickcheck = "0.8.0"
quickcheck_macros = "0.8.0"

[dev-dependencies.phf]
version = "0.8"
features = ["macros"]
