[package]
name = "sss"
version = "0.1.0"
authors = ["Ding Xiang Fei <dingxiangfei2009@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
alga = "0.9.1"
alga_derive = "0.9.1"
cached = "0.11.0"
crossbeam = "0.7.3"
derive_more = "0.15.0"
failure = "0.1.0"
lazy_static = "1.0"
num = "0.2.0"
rand = "0.7.2"
rand_distr = "0.2.2"
rayon = "1.2.0"
sha2 = "0.8.0"

[dependencies.bitvec]
version = "0.16.0"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rug]
version = "1.6.0"
features = ["serde"]

[dependencies.ndarray]
version = "0.13.0"
features = ["rayon"]

[dev-dependencies]
approx = "0.3.0"
quickcheck = "0.8.0"
quickcheck_macros = "0.8.0"
rand_chacha = "0.2.1"
serde_json = "1.0.0"

[dev-dependencies.phf]
version = "0.8"
features = ["macros"]
