[package]
name = "sss"
version = "0.1.0"
authors = ["Ding Xiang Fei <dingxiangfei2009@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
alga = "0.9.1"
alga_derive = "0.9.1"
cached = "0.11.0"
crossbeam = "0.7.3"
derive_more = "0.15.0"
digest = "0.10.0"
failure = "0.1.0"
generic-array = "0.14"
itertools = "0.9.0"
lazy_static = "1.0"
num = "0.2.0"
once_cell = "1"
rand = "0.8.0"
rand_distr = "0.4.3"
rayon = "1.5.0"
serde_json = "1.0.0"
sha2 = "0.9.0"
structopt = "0.3.0"

[dependencies.bitvec]
version = "0.17.0"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rug]
version = "1.6.0" 
features = ["serde"]

[dependencies.ndarray]
version = "0.13.0"
features = ["rayon"]

[dev-dependencies]
approx = "0.3"
blake2 = "0.10.0"
quickcheck = "1.0.0"
rand_chacha = "0.3.1"

[dev-dependencies.phf]
version = "0.8"
features = ["macros"]
